<resources>
    <string name="app_name">LabTwo</string>
    <string-array name="selection_options">
        <item>Words</item>
        <item>Symbols</item>
    </string-array>
</resources>